[gd_scene load_steps=19 format=3 uid="uid://c6rfy6ymyjf5e"]

[ext_resource type="Script" path="res://Scripts/Character.gd" id="1_gqh8n"]
[ext_resource type="Texture2D" uid="uid://8el3f0qqov1m" path="res://Assets/character.png" id="2_t1kc4"]
[ext_resource type="Script" path="res://Scripts/STATES.gd" id="3_jxtp4"]
[ext_resource type="PackedScene" uid="uid://d1yc45sfomloa" path="res://Scenes/Entities/Player/IDLE.tscn" id="3_nikui"]
[ext_resource type="PackedScene" uid="uid://chkey6semamrv" path="res://Scenes/Entities/Player/MOVE.tscn" id="4_gn233"]
[ext_resource type="PackedScene" uid="uid://dj0ub36r16unm" path="res://Scenes/Entities/Player/JUMP.tscn" id="5_pucii"]
[ext_resource type="PackedScene" uid="uid://dyr148up4j8gl" path="res://Scenes/Entities/Player/FALL.tscn" id="6_yhvhn"]
[ext_resource type="PackedScene" uid="uid://dap6d4ob5myxl" path="res://Scenes/Entities/Player/DASH.tscn" id="8_axmec"]
[ext_resource type="PackedScene" uid="uid://djsx2oj14ju8v" path="res://Scenes/Entities/Player/SLIDE.tscn" id="9_r2chd"]
[ext_resource type="PackedScene" uid="uid://t6elg4gngm07" path="res://Scenes/Entities/Player/ATTACK_GROUND.tscn" id="10_qo76x"]
[ext_resource type="PackedScene" uid="uid://giyu2lrnckoo" path="res://Scenes/Entities/Player/ATTACK_JUMP.tscn" id="11_uivd5"]
[ext_resource type="PackedScene" uid="uid://2631l2aq8cim" path="res://Scenes/Entities/Player/ATTACK_FALL.tscn" id="12_4oq02"]
[ext_resource type="PackedScene" uid="uid://dovg3su1qtc5g" path="res://Scenes/Components/hammer_hit_box.tscn" id="13_oanpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gu11"]
size = Vector2(2.5, 3)

[sub_resource type="Animation" id="Animation_5qexa"]
resource_name = "MOVE"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_bxgj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_1tgm5"]
resource_name = "GROUND_ATTACK"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("STATES/ATTACK_GROUND")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ou3m"]
_data = {
"GROUND_ATTACK": SubResource("Animation_1tgm5"),
"MOVE": SubResource("Animation_5qexa"),
"RESET": SubResource("Animation_bxgj4")
}

[node name="CharacterBody" type="CharacterBody2D" groups=["player"]]
scale = Vector2(2, 2)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_gqh8n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.75, 1.5)
shape = SubResource("RectangleShape2D_0gu11")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 4.76837e-07)
scale = Vector2(0.136719, 0.136719)
texture = ExtResource("2_t1kc4")
hframes = 13
frame = 5

[node name="Camera2D" type="Camera2D" parent="."]

[node name="STATES" type="Node" parent="." node_paths=PackedStringArray("hammer_hit_box")]
script = ExtResource("3_jxtp4")
hammer_hit_box = NodePath("../HammerHitBox")

[node name="IDLE" parent="STATES" instance=ExtResource("3_nikui")]

[node name="MOVE" parent="STATES" instance=ExtResource("4_gn233")]

[node name="JUMP" parent="STATES" instance=ExtResource("5_pucii")]

[node name="FALL" parent="STATES" instance=ExtResource("6_yhvhn")]

[node name="DASH" parent="STATES" instance=ExtResource("8_axmec")]

[node name="SLIDE" parent="STATES" instance=ExtResource("9_r2chd")]

[node name="ATTACK_GROUND" parent="STATES" instance=ExtResource("10_qo76x")]

[node name="ATTACK_JUMP" parent="STATES" instance=ExtResource("11_uivd5")]

[node name="ATTACK_FALL" parent="STATES" instance=ExtResource("12_4oq02")]

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Raycasts" type="Node2D" parent="."]

[node name="TopRight" type="RayCast2D" parent="Raycasts"]
position = Vector2(-1, 0)
scale = Vector2(0.2, 0.2)
target_position = Vector2(13, 2.08165e-12)
collision_mask = 2

[node name="BottomRight" type="RayCast2D" parent="Raycasts"]
position = Vector2(-1, 3)
scale = Vector2(0.2, 0.2)
target_position = Vector2(13, 2.08165e-12)
collision_mask = 2

[node name="TopLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2(-2, 0)
scale = Vector2(0.2, 0.2)
target_position = Vector2(-13, 2.08165e-12)
collision_mask = 2

[node name="BottomLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2(-2, 3)
scale = Vector2(0.2, 0.2)
target_position = Vector2(-13, 2.08165e-12)
collision_mask = 2

[node name="HammerHitBox" parent="." instance=ExtResource("13_oanpp")]
position = Vector2(-2, 1)
scale = Vector2(0.2, 0.2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ou3m")
}
